--- a/client/package.json
+++ b/client/package.json
@@ -3,11 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "formik": "^1.5.7",
+    "gh-pages": "^2.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "yup": "^0.27.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -16,6 +21,7 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "homepage": "http://haeke.github.io/ping-coming-soon",
   "browserslist": {
     "production": [
       ">0.2%",
